Bug 95003 - Inserted Frame loses background color/hatching/bitmap/gradient
Summary: Inserted Frame loses background color/hatching/bitmap/gradient
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.3.0.1 rc
Hardware: Other All
: medium minor
Assignee: Not Assigned
URL:
Whiteboard: target:6.3.0 target:6.2.0.1
Keywords:
Depends on:
Blocks: Area-Fill-Tab Frame
  Show dependency treegraph
 
Reported: 2015-10-13 08:20 UTC by Oliver Specht (CIB)
Modified: 2019-03-21 11:51 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Oliver Specht (CIB) 2015-10-13 08:20:53 UTC
- call Insert/Frame/Frame dialog
- switch to Area page
- select Color 
- Press OK button
-> frame is transparent 
The same applies to the other area types

Happens at least since LO 4.4.6.1.0
Comment 1 Buovjaga 2015-10-14 13:50:43 UTC
Reproduced.

The color can be applied ok through the sidebar.
In 4.3.0.1, when creating the frame, all the area options are blank.
After creation and opening the properties dialog, they are populated with choices, but only certain ones can be applied. Chart 7, 8 and 9 worked at least. This is the same with 5.0.2

Sidebar is the only one allowing us to set Tango sky blue 1.

Win 7 Pro 64-bit, Version: 5.0.2.2 (x64)
Build ID: 37b43f919e4de5eeaca9b9755ed688758a8251fe
Locale: fi-FI (fi_FI)

4.3.0.1
Comment 2 Buovjaga 2015-10-15 10:27:04 UTC
Also with:
Win 7 Pro 64-bit Version: 5.1.0.0.alpha1+
Build ID: 4b55c28940d741e53648115a9cfb58f2d6db38a5
TinderBox: Win-x86@62-merge-TDF, Branch:MASTER, Time: 2015-10-15_06:14:50
Locale: en-US (fi_FI)
Comment 3 QA Administrators 2016-11-08 11:22:38 UTC Comment hidden (obsolete)
Comment 4 Thomas Lendo 2018-05-30 22:45:55 UTC
Still repro with Version: 6.2.0.0.alpha0+
Build ID: 7725eff80a7bc3f3e422e56e1cd7bfa531f19a70
CPU threads: 4; OS: Linux 4.13; UI render: default; VCL: gtk3; 
Locale: de-DE (de_DE.UTF-8); Calc: group threaded
Comment 5 Commit Notification 2018-12-12 12:29:24 UTC
Martin van Zijl committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/083341cb501a14efe9d9131e4f08bf95e056f65e%5E%21

tdf#95003 inserted frame loses background color

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2018-12-12 17:20:20 UTC
Martin van Zijl committed a patch related to this issue.
It has been pushed to "libreoffice-6-2":

https://git.libreoffice.org/core/+/4132027e0899a150092cf9a5e5051805254bc20a%5E%21

tdf#95003 inserted frame loses background color

It will be available in 6.2.0.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Xisco Faulí 2019-01-14 09:52:27 UTC
A polite ping to Martin van Zijl:
Is this bug fixed? if so, could you please close it as RESOLVED FIXED ? Otherwise, Could you please explain what's missing?
Thanks
Comment 8 Xisco Faulí 2019-03-21 11:51:21 UTC
It seems to be fixed in

Version: 6.3.0.0.alpha0+
Build ID: 7c7a4675ad5d61add70dd073f680ea37012962ce
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

Closing as VERIFIED FIXED!

@Martin van Zijl, thanks for fixing this issue!!