tdf#95003 inserted frame loses background color

The Area tab settings in the Insert Frame dialog are now applied
correctly (including color).

Change-Id: Id152c9409595970078970b43068a7ee594827d2b